云函数---下载功能

--- a/project.config.json
+++ b/project.config.json
@@ -31,5 +31,7 @@
     "ignore": [],
     "include": []
   },
-  "appid": "wx90599f9901693a90"
+  "appid": "wx90599f9901693a90",
+  "cloudfunctionRoot": "cloud-functions/",
+  "cloudfunctionTemplateRoot": "cloudfunctionTemplate/"
 }
