--- a/cloud-functions/ocr/package.json
+++ b/cloud-functions/ocr/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "download",
+  "name": "ocr",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "wx-server-sdk": "^3.0.1",
-    "xlsx": "^0.18.5"
+    "wx-server-sdk": "~3.0.1",
+    "tencentcloud-sdk-nodejs": "^4.0.3"
   }
 }
