--- a/cloud-functions/uploadInventoryData/package.json
+++ b/cloud-functions/uploadInventoryData/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "download",
+  "name": "uploadInventoryData",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,7 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "wx-server-sdk": "^3.0.1",
-    "xlsx": "^0.18.5"
+    "wx-server-sdk": "latest"
   }
 }
